[project]
name = "aio-deepagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.0.5",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-openai>=0.3.0",
    "httpx[socks]>=0.27.2",
]
